--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,17 @@ psycopg = {extras = ["binary"], version = "^3.1.12"}
 greenlet = "^2.0.2"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+    "integration",
+]
